Fullscreen ios webapp without controls

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta charset="UTF-8">
     <meta name="author" content="Michael Abt" />
 
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+
     <style type="text/css">
     <!--
-
-
 
     html, body {
       height: 100%;
